--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,12 @@
-<html>
-    <head>
-        <title>Ravisha's blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">Ravisha's blog</a></h1>
+{% extends 'blog/base.html' %}
+
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            <p>published: {{ post.published_date }}</p>
         </div>
-
-        {% for post in posts %}
-            <div>
-                <p>published: {{post.published_date}}</p>
-                <h2><a href="">{{post.title}}</a></h2>
-                <p>{{post.text}}</p>
-            </div>
-        {% endfor %}
-
-        
-    </body>
-</html>
+        <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+            
